syntax = "proto3";
package osmosis.lockup;

import "gogoproto/gogo.proto";
import "osmosis/lockup/lock.proto";
import "osmosis/lockup/params.proto";

option go_package = "github.com/osmosis-labs/osmosis/v21/x/lockup/types";

// GenesisState defines the lockup module's genesis state.
message GenesisState {
  uint64 last_lock_id = 1;
  repeated PeriodLock locks = 2 [ (gogoproto.nullable) = false ];
  repeated SyntheticLock synthetic_locks = 3 [ (gogoproto.nullable) = false ];
  Params params = 4;
}
